--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/vegasag/messenger-fpl-webhook/issues"
   },
-  "homepage": "https://github.com/vegasag/messenger-fpl-webhook#readme"
+  "homepage": "https://github.com/vegasag/messenger-fpl-webhook#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
